# storyteller-memory

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  bootstrap.sh  conftest.py  docker-compose.yml  pyproject.toml  results.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_sessions_turns.py  0003_session_config.py
api/: deps.py  main.py
configs/: best.yaml
core/: db.py  llm_anthropic.py  llm_client.py  llm_fakes.py  llm_local.py  session_config.py  story_loop.py  story_starters.py
core/memory/: mem0_adapter.py  reflection.py  retrieval_policy.py  world_state.py
core/prompts/: reflection.txt  story_continuation.txt
data/: story_starters.json
docs/: architecture.md  experiments.md  pending-human-tuning.md  product-audit.md  prompts.md  session-report-2026-07-13.md  tasks.md
docs/audit/: README.md
docs/inbox-archive/: 2026-07-11-local-llm-client.md  (+3 more)
eval/: count_questions.py  harness.py  judges.py  run_all_scenarios.py  run_experiments.py  scenario.py
scripts/: manual_reflection_test.py  manual_test.py  manual_test_sprint2.py  seed_test_data.py  smoke_llm.py  smoke_local.py
tests/: test_api.py  test_api_lifespan.py  test_full_scenarios.py  test_harness.py  test_judges.py  test_llm_client.py  test_llm_local.py  test_mem0_adapter.py  test_reflection.py  test_retrieval_policy.py  test_scenario.py  test_seed_scenarios.py  test_session_config.py  test_story_loop.py  test_story_loop_v2.py  test_story_starters.py  test_world_state.py
ui/: README.md  next.config.ts  vitest.config.ts  vitest.setup.ts
ui/src/app/: page.tsx  (+1 more)
(+81 files in other folders)
